--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start" : "node ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
+    "@types/dotenv": "^4.0.3",
     "@types/express": "^4.11.1",
     "@types/morgan": "^1.7.35"
   }
